# padavan-KVR

./: README.md
.github/workflows/: JDC-1.yml  K2P-32m+512m+usb.yml  K2P.yml  MI-MINI.yml  MI-R3G.yml  MI-R3P-breed.yml  MI-R3P_pb-boot.yml  NEWIFI3.yml  README.md  RM2100.yml  WR300.yml  WR330.yml  优酷-L1.yml
trunk/: build_firmware_modify  coustom
trunk/configs/templates/: JDC-1.config  K2P-32-512-usb.config  K2P-USB.config  NEWIFI3.config  QM-B1.config
trunk/libs/c-ares/: Makefile
trunk/libs/libconfuse/: Makefile
trunk/libs/libcurl/: Makefile
trunk/libs/libev/: Makefile
trunk/libs/libexif/: Makefile
trunk/libs/libiconv/: Makefile
trunk/libs/libjson-c/: Makefile
trunk/libs/libpcap/: Makefile
trunk/libs/libpcre/: Makefile
trunk/libs/libsodium/: Makefile
trunk/libs/libsqlite/: Makefile
trunk/libs/libssl/: Makefile  openssl-1.1.1s.patch
trunk/libs/libudns/: Makefile
trunk/libs/libuv/: Makefile
trunk/libs/libxml2/: Makefile
trunk/libs/libz/: Makefile
trunk/libs/mbedtls/: Makefile
trunk/linux-3.4.x/crypto/: Makefile
trunk/linux-3.4.x/fs/: Makefile
trunk/linux-3.4.x/net/: Kconfig  Makefile
trunk/linux-3.4.x/security/: Makefile
trunk/tools/: Makefile
trunk/user/: Makefile
trunk/user/adguardhome/: adguardhome.sh
trunk/user/alist/: Makefile  alist.sh
trunk/user/aliyundrive-webdav/: Makefile  aliyundrive-webdav.sh
trunk/user/aria2/: Makefile  aria2c
trunk/user/bafa/: Makefile  bafa.sh  stdoutsubc
trunk/user/caddy/: Makefile  caddy.sh  caddy_script.sh
trunk/user/chnroute/: chnroute.bz2
trunk/user/cloudflare/: Makefile  cloudflare.sh
trunk/user/cloudflared/: Makefile  cloudflared.sh
trunk/user/dnsmasq/: Makefile
trunk/user/easytier/: Makefile  easytier.sh
trunk/user/frp/: Makefile  frp.sh  frp_script.sh
trunk/user/httpd/: common.h  dbapi.c  httpd.c  https-cert.sh  https.c  upload.c  variables.c  web_ex.c
trunk/user/iperf3/: Makefile
trunk/user/jq/: Makefile  jq
trunk/user/koolproxy/: koolproxy.sh  koolproxy_rules_list.sh
trunk/user/lucky/: Makefile  lucky.sh
trunk/user/miniupnpd/: Makefile
trunk/user/msd_lite/: Makefile  liblcb_msd_lite.diff  msd_lite.conf  msd_lite.diff
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/: CMakeLists.txt  lib.project  liblcb.workspace  readme.md
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/.github/workflows/: build-macos-latest.yml  build-ubuntu-latest.yml
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/al/: hw.h  os.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/crypto/dsa/: ecdsa.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/crypto/hash/: gost3411-2012.h  md5.h  sha1.h  sha2.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/math/: big_num.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/net/: host_address.h  hostname_list.h  socket.h  socket_options.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/proto/: dns.h  radius.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/threadpool/: threadpool.h  threadpool_msg_sys.h  threadpool_task.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/include/utils/: base64.h  hash_bucket.h  mem_utils.h  ring_buffer.h  sys.h
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/src/net/: socket.c  socket_address.c  socket_options.c  utils.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/src/proto/: bt_tracker.c  dns_resolv.c  http.c  http_client.c  http_server.c  http_server_auth.c  radius_client.c  sap_rcvr.c  upnp_ssdp.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/src/threadpool/: threadpool.c  threadpool_msg_sys.c  threadpool_task.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/src/utils/: bt_encode.c  buf_str.c  cmd_line_daemon.c  data_cache.c  info.c  ini.c  ring_buffer.c  sys.c  sys_res_limits_xml.c  xml.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/tests/: CMakeLists.txt
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/tests/base64/: main.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/tests/ecdsa/: main.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/tests/hash/: main.c
trunk/user/msd_lite/msd_lite-db58338/src/liblcb/tests/threadpool/: main.c  test-threadpool.project
trunk/user/mtkiappd/: iappdefs.h  mt_iapp_util.c  rt_config.h  rtmpiapp.c  rtmpiapp.h
trunk/user/n2n/: Makefile  README.md  edge  n2n-benchmark  supernode
trunk/user/natpierce/: Makefile  natpierce.sh  qiaodao.sh
trunk/user/netcat/: Makefile  netcat
trunk/user/networkmap/: networkmap.c
trunk/user/nginx/: Makefile  Nginx_1.27.4
trunk/user/openvpn/: Makefile
trunk/user/pdnsd/: Makefile
trunk/user/rc/: init.c  net.c  net_wan.c  rc.c  rc.h  services.c  services_ex.c  services_stor.c  watchdog.c
trunk/user/redsocks/: Makefile
trunk/user/scripts/: Makefile  autostart.sh  check_disk_size  copyscripts.sh  dev_init.sh  mtd_storage.sh  profile  rwfs2ubi.sh  sh_ezscript.sh  sysinfo.sh  wgetcurl.sh  wxsend.sh
trunk/user/scutclient/: cross-mipsel-linux.cmake
trunk/user/shared/: cflags.mk  defaults.c  defaults.h  notify_rc.h
trunk/user/simple-obfs/: Makefile
trunk/user/socat/: Makefile
trunk/user/tailscale/: Makefile  tailscale.sh
trunk/user/tcpdump/: Makefile
trunk/user/trojan/: trojan
trunk/user/ttyd/: Makefile  ttyd.sh
trunk/user/tunsafe/: Makefile  (+1 more)
(+820 files in other folders)
